--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     username: postgres
     password: 1111
   jpa:
+    hibernate:
+      ddl-auto: none
     properties:
       hibernate:
         dialect:  org.hibernate.dialect.PostgreSQLDialect
