--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,8 +1,13 @@
-server.port=8761
+server:
+  port: 8761
 
-spring.application.name=eserver
+spring:
+  application:
+    name: eserver
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: false
+    fetch-registry: false
