fix - refactoring authServer and add tymeleaf dependency

--- a/client-novabook/src/main/resources/application.yml
+++ b/client-novabook/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
     cache: false
+    resources:
+      add-mappings: true
 
   security:
     oauth2:
