--- a/client-novabook/src/main/resources/application.yml
+++ b/client-novabook/src/main/resources/application.yml
@@ -31,8 +31,9 @@ spring:
           spring:
             issuer-uri: http://127.0.0.1:9000
             authorization-uri: http://localhost:9000/oauth2/authorize
+
             token-uri: http://localhost:9000/oauth2/token
             jwk-set-uri: http://localhost:9000/oauth2/jwks
             user-info-uri: http://localhost:9000/userinfo
-            user-name-attribute: sub
+#            user-name-attribute: sub
 # end::provider_config[]
