--- a/user-api/src/main/resources/application.yml
+++ b/user-api/src/main/resources/application.yml
@@ -1,14 +1,16 @@
 server:
-  port: 8082
+  port: 8090
 
 spring:
   application:
     name: user-api
+
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/nb_clients
     username: postgres
     password: 1111
+
   jpa:
     hibernate:
       ddl-auto: none
@@ -16,8 +18,15 @@ spring:
       hibernate:
         dialect:  org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
-#  security:
-#    oauth2:
-#      resourceserver:
+  security:
+    oauth2:
+      resourceserver:
+        opaque:
+          issuer-uri: http://127.0.0.1:9000/oauth2/introspect
+          client: nb-client
+          secret: secret
 #        jwt:
 #          issuer-uri: http://127.0.0.1:9000
+#  Для отмены создания пользователя по умолчанию
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
