--- a/client-novabook/src/main/resources/application.yml
+++ b/client-novabook/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
             client-secret: secret
             authorization-grant-type: authorization_code
             redirect-uri: "http://127.0.0.1:8081/login/oauth2/code/{registrationId}"
-            scope: openid,api.read
+            scope: openid
         # end::client_config[]
         # tag::provider_config[]
         provider:
