--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -13,7 +13,8 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/nb_users
     username: postgres
-    password: 1111
+    password: postgres
+#    password: 1111
   jpa:
     hibernate:
       ddl-auto: none
