--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -7,25 +7,30 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.5</version>
+        <version>3.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>ru.nova</groupId>
     <artifactId>eureka-server</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>eureka-server</name>
+    <description>eureka-server</description>
 
     <properties>
-        <spring.cloud-version>2021.0.5</spring.cloud-version>
+        <spring.cloud-version>2022.0.0</spring.cloud-version>
     </properties>
 
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
