--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -3,11 +3,9 @@ server:
 
 spring:
   application:
-    name: eserver
+    name: eureka-server
 
 eureka:
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
     register-with-eureka: false
     fetch-registry: false
