--- a/client-novabook/src/main/resources/application.yml
+++ b/client-novabook/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 # tag::client_config[]
 # tag::provider_config_0[]
 spring:
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
   application:
     name: nb_client
   thymeleaf:
