feat messages in EditController

--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -18,6 +18,8 @@
     <description>eureka-server</description>
 
     <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <spring.cloud-version>2022.0.0</spring.cloud-version>
     </properties>
 
