--- a/wall-api/src/main/resources/application.yml
+++ b/wall-api/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/nb_wall
     username: postgres
-    password: postgres
-#    password: 1111
+#    password: postgres
+    password: 1111
 
   jpa:
     hibernate:
